# mongosql

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  RELEASE.md  errors.md  evergreen.yml  semantics.md
agg-ast/schema_derivation/: Cargo.toml
agg-ast/schema_derivation/src/: lib.rs  match_schema_derivation.rs  match_stage.rs  match_stage_test.rs  negative_normalize.rs  schema_derivation.rs  schema_derivation_test.rs  test.rs
agg-ast/schema_derivation/src/negative_normalize_tests/: match_field.rs  mod.rs  negative_normal_form.rs  tagged_ops.rs  untagged_ops.rs
agg-ast/schema_derivation/src/schema_derivation_tests/: bson.rs  expression.rs  match_expr.rs  match_stage.rs  mod.rs  stage.rs  tagged_ops.rs  untagged_ops.rs
benchmark/pipeline_generator/: Cargo.toml
benchmark/pipeline_generator/config/: config.yml
benchmark/profiler/: Cargo.toml  README.md
benchmark/profiler/benches/: profile.rs
benchmark/profiler/src/: main.rs  query_gen_utils.rs
benchmark/profiler/src/catalog/: lib.rs  process_catalog.rs
benchmark/profiler/src/config_loader/: lib.rs  process_config.rs
e2e-tests/: Cargo.toml  README.md  build.rs
e2e-tests/src/: lib.rs
e2e-tests/src/index_test/: mod.rs
e2e-tests/src/query_test/: mod.rs
e2e-tests/src/utils/: mod.rs
e2e-tests/templates/: mod_header_template
index-usage-test/: Cargo.toml
index-usage-test/src/: lib.rs
mongosql/: Cargo.toml  build.rs
mongosql-c/: Cargo.toml  build.rs
mongosql-c/src/: lib.rs
mongosql-datastructures/: Cargo.toml
mongosql-datastructures/src/: binding_tuple.rs  unique_linked_hash_map.rs
mongosql/benches/: translate.rs
mongosql/src/: lib.rs  result.rs  schema.rs  test.rs  util.rs
mongosql/src/agg_ir/: definitions.rs
mongosql/src/air/: definitions.rs  mod.rs  util.rs
mongosql/src/air/agg_ast/: ast_definitions.rs  deserialize_test.rs  from_test.rs  mod.rs
mongosql/src/air/desugarer/: accumulators.rs  fold_converts.rs  join.rs  lookup.rs  match_null_semantics.rs  mod.rs  remove_id.rs  root_references.rs  sql_null_semantics_operators.rs  subquery.rs  test.rs  unsupported_operators.rs  util.rs
mongosql/src/air/optimizer/: mod.rs  simplify_lookups.rs
mongosql/src/algebrizer/: definitions.rs  errors.rs  mod.rs  test.rs
mongosql/src/ast/: definitions.rs  mod.rs  pretty_print.rs  pretty_print_fuzz_test.rs  pretty_print_test.rs
mongosql/src/ast/rewrites/: aggregate.rs  alias.rs  from.rs  group_by_select_alias.rs  mod.rs  not.rs  optional_parameters.rs  order_by.rs  scalar_functions.rs  select.rs  table_subquery.rs  test.rs  tuples.rs
mongosql/src/ast/visitors/: collections.rs  literal.rs  mod.rs  subpath_fields.rs  test.rs
mongosql/src/catalog/: mod.rs
mongosql/src/codegen/: expressions.rs  functions.rs  match_query.rs  mod.rs  mql.rs  stages.rs  test.rs  utils.rs
mongosql/src/codegen/agg_ir_to_mql/: mod.rs  test.rs
mongosql/src/codegen/air_to_mql/: expressions.rs  functions.rs  mod.rs  stages.rs  test.rs  utils.rs
mongosql/src/codegen/ir_to_mql/: mod.rs  test.rs
mongosql/src/codegen/mir_to_mql/: mod.rs  test.rs
mongosql/src/codegen/test/: expressions.rs  match_query.rs  stages.rs
mongosql/src/internal_spec_test/: mod.rs
mongosql/src/ir/: binding_tuple.rs  constant_folding.rs  definitions.rs  flatten.rs  mod.rs  namespace.rs  schema.rs  test.rs  unwind_util.rs
mongosql/src/json_schema/: json_schema_test.rs  mod.rs  test.rs
mongosql/src/mapping_registry/: mod.rs
mongosql/src/mir/: constant_folding.rs  definitions.rs  flatten.rs  match_splitting.rs  mod.rs  schema.rs  schema_util.rs  test.rs  unwind_util.rs
mongosql/src/mir/optimizer/: mod.rs  util.rs
mongosql/src/mir/schema/: errors.rs  ext_json_detector.rs  mod.rs  test.rs  util.rs
mongosql/src/options/: mod.rs
mongosql/src/parser/: ast.rs  lalrpop.rs  mod.rs  mongosql.lalrpop  test.rs  util.rs
mongosql/src/schema/: definitions.rs  jaccard_test.rs  mod.rs  test.rs
mongosql/src/translator/: definitions.rs  expressions.rs  match_query.rs  mod.rs  stages.rs  test.rs  utils.rs
mongosql/src/translator/test/: expressions.rs  match_query.rs  mod.rs  stages.rs
mongosql/src/usererror/: mod.rs  test.rs  util.rs
mongosql/src/util/: mod.rs  unique_linked_hash_map.rs
mongosqltranslate/: Cargo.toml
mongosqltranslate/src/: command.rs  command_tests.rs  lib.rs  panic_safe.rs
sampler/: Cargo.toml  README.md
sampler/src/: errors.rs  lib.rs
schema-builder-tool/: Cargo.toml
schema-builder-tool/etc/: config.yml
schema-builder-tool/src/: builder_result.rs  cli.rs  consts.rs  main.rs  schema_document.rs
schema-builder-tool/src/utils/: mod.rs
schema-builder-tool/testfiles/: invalid_config.yml  valid_config.yml
schema-builder-tool/tests/: e2e.rs
service/: Cargo.toml  Dockerfile  README.md  build.rs
service/proto/: translator.proto
service/proto/translator/v1/: translator.proto
service/src/: lib.rs  main.rs  server.rs  translator.rs  translator.v1.rs  version.rs
service/src/catalog/: mod.rs  process_catalog.rs
service/src/catalog/catalogs/: catalog_schema_multiple_namespaces_test.json  catalog_schema_select_order_test.json  catalog_schema_test.json  empty.json  exclude_namespaces_test.json  schema_checking_mode_test.json  translate_test.json
service/src/metrics/: metrics_collector.rs  mod.rs  test.rs
service/src/service/: mod.rs  test.rs  translate_sql_service.rs
service/src/trace/: distributed_tracing.rs  mod.rs  test.rs
service/test/: client.rs
service/tests/: client_server.rs
service/tests/grpc/: util.rs
test-utils/: Cargo.toml
test-utils/src/: data-loader.rs  e2e_db_manager.rs  lib.rs  schema_builder_library_integration_test_consts.rs
test-utils/src/build_utils/: README.md  mod.rs
test-utils/src/build_utils/templates/: error_test_with_panic_body_template  (+5 more)
test-utils/src/index/: mod.rs
test-utils/src/query/: mod.rs
visitgen/: Cargo.toml
visitgen-test/: Cargo.toml  build.rs
visitgen-test/src/: lib.rs
visitgen-test/src/util/: mod.rs  unique_linked_hash_map.rs
visitgen/src/: analysis.rs  gen_visitor_trait.rs  gen_walk_implementations.rs  lib.rs  util.rs
(+348 files in other folders)
