[workspace]
resolver = "2"

members = [
    "agg-ast",
    "benchmark/pipeline_generator",
    "benchmark/profiler",
    "bic-trip",
    "e2e-tests",
    "mongosql-datastructures",
    "mongosql-c",
    "mongosql",
    "service",
    "test-utils",
    "schema-builder-tool",
    "schema-builder-library",
    "usererrordisplay-impl",
    "visitgen",
    "visitgen-test",
    "mongosqltranslate",
]

[profile.release]
lto = "fat"
codegen-units = 1
debug = true
