[workspace]
resolver = "2"

members = [
    "agg-ast/ast",
    "agg-ast/schema_derivation",
    "benchmark/pipeline_generator",
    "benchmark/profiler",
    "bic-trip",
    "e2e-tests",
    "evergreen/create-tasks",
    "mongosql-datastructures",
    "mongosql-c",
    "mongosql",
    "service",
    "test-utils",
    "mongodb-schema-manager",
    "schema-builder-library",
    "usererrordisplay-impl",
    "visitgen",
    "visitgen-test",
    "mongosqltranslate",
    "oidc",
]

[workspace.dependencies]
mongodb = "3"

[profile.release]
lto = "fat"
codegen-units = 1
debug = true
