[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongosql = { path = "../mongosql" }
test-utils = { path = "../test-utils" }
mongodb = { workspace = true } 

[build-dependencies]
test-utils = { path = "../test-utils" }

[features]
index = ["generated"]
query = ["generated"]
e2e = ["generated"]
error = ["generated"]
all = ["index", "query", "e2e", "error"]
generated = []
