[package]
name = "index-usage-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
lazy_static = "1"
mongosql = { path = "../mongosql" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.21"
thiserror = "1"

[dependencies.mongodb]
version = "2.6"
default-features = false
features = ["tokio-sync"]
