[package]
name = "mongosql-c"
version = "0.1.0"
authors = ["Ryan Chipman <ryan@ryanchipman.com>", "Patrick Meredith <pmeredit@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
bson = "2"
lazy_static = "1"
libc = "0.2"
mongosql = { path = "../mongosql" }

[lib]
name = "mongosql"
crate-type = ["staticlib", "cdylib"]

[features]
test = []
