[package]
name = "mongosql-datastructures"
version = "0.1.0"
authors = ["Ryan Chipman <ryan@ryanchipman.com>", "Patrick Meredith <pmeredit@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked-hash-map = "0.5.4"
thiserror = "1"
