[package]
name = "mongosql"
version = "0.1.0"
authors = ["Ryan Chipman <ryan@ryanchipman.com>", "Patrick Meredith <pmeredit@protonmail.com>"]
edition = "2018"

[dependencies]
bson = "2"
lalrpop-util = "0.19.4"
lazy_static = "1"
linked-hash-map = "0.5.4"
quickcheck = "1"
rand = "0.8.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8.21"
thiserror = "1"
variant_count = "1.1.0"
mongosql-datastructures = { path = "../mongosql-datastructures" }

[build-dependencies]
lalrpop = "0.19.4"
visitgen = { path = "../visitgen" }
mongosql-datastructures = { path = "../mongosql-datastructures" }
regex = "1.4.6"
