[package]
name = "mongosql"
version = "0.0.0"
authors = [
    "Ryan Chipman <ryan@ryanchipman.com>",
    "Patrick Meredith <pmeredit@protonmail.com>",
    "Nathan Leniz <nathan.leniz@gmail.com>",
]
edition = "2021"

[dependencies]
bson = { version = "2.11", features = ["chrono-0_4"] }
chrono = "0.4.24"
itertools = "0.10.1"
lalrpop-util = { version = "0.20.2", features = ["lexer"] }
lazy_static = "1"
linked-hash-map = "0.5.4"
quickcheck = "1"
rand = "0.8.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8.21"
enum-iterator = "0.7.0"
tailcall = "1.0.1"
thiserror = "1"
variant_count = "1.1.0"
visitgen = { path = "../visitgen" }
mongosql-datastructures = { path = "../mongosql-datastructures" }
edit-distance = "2.1.0"
usererrordisplay-impl = { path = "../usererrordisplay-impl" }
derive-new = "0.5.9"
base64 = "0.21.3"

[target.'cfg(unix)'.dev-dependencies]
criterion = "0.3"
pprof = { version = "0.4", features = ["flamegraph", "criterion"] }

[[bench]]
name = "translate"
harness = false

[build-dependencies]
lalrpop = "0.20.2"
regex = "1.4.6"
