[package]
name = "schema-builder-tool"
version = "0.0.0"
edition = "2021"

[dependencies]
mongodb = "3.0.1"
mongosql = { path = "../mongosql" }
clap = { version = "4.4.18", features = ["derive"] }
rpassword = "7.3.1"
chrono = { version = "0.4.33", features = ["serde"] }
dialoguer = "0.11.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
schema-builder-library = { path = "../schema-builder-library" }
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.80"
indicatif = "0.17.8"
thiserror = "1.0.57"
serde_yaml = "0.9"
confy = { version = "0.6", features = ["yaml_conf"], default-features = false }
lazy_static = "1.4.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
