[package]
name = "schema-builder-tool"
version = "0.0.0"
edition = "2021"


[dependencies]
mongodb = "3.1.0"
clap = { version = "4.4.18", features = ["derive"] }
dialoguer = "0.11.0"
serde = { version = "1.0.196", features = ["derive"] }
schema-builder-library = { path = "../schema-builder-library" }
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.80"
indicatif = "0.17.8"
confy = { version = "0.6", features = ["yaml_conf"], default-features = false }
lazy_static = "1.4.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
human-panic = "2.0.0"
glob = "0.3.1"
itertools = "0.13.0"
serde_stacker = "0.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
test-utils = { path = "../test-utils" }

[lints.clippy]
unwrap_used = "deny"

[features]
community = []
enterprise = []
