[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "service"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "tests/bin/client.rs"

[[bin]]
name = "generate_proto"
path = "src/bin/generate_proto.rs"

[dependencies]
prost = "0.12.1"
tonic = "0.10.2"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
futures = { workspace = true }
tonic-reflection = "0.10.2"
mongosql = { path = "../mongosql" }
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
bson = { workspace = true }
tonic-build = "0.10.2"
prometheus = "0.13.4"
hyper = "0.14.30"
log = { version = "0.4.22", features = ["kv"] }
opentelemetry = "0.24.0"
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = "0.17.0"
opentelemetry-stdout = "0.5.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "chrono", "time"]}

[dev-dependencies]
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
futures-util = "0.3.25"
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
opentelemetry_sdk = { version = "0.24.1", features = ["testing", "trace"] }
reqwest = { version = "0.11", features = ["blocking"] }

[features]
integration = []
