[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "data-loader"
path = "src/data-loader.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake = "2"
itertools = "0.10.5"
lazy_static = "1"
mongosql = { path = "../mongosql" }
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.21"
thiserror = "1"
tokio = "1.38.0"
serde_stacker = "0.1"

[dependencies.mongodb]
version = "3.0.1"
features = ["sync"]
