[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "data-loader"
path = "src/data-loader.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake = "2"
itertools = { workspace = true }
lazy_static = { workspace = true }
mongosql = { path = "../mongosql" }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde_stacker = { workspace = true }

[dependencies.mongodb]
version = "3.1.0"
features = ["sync"]
