[package]
name = "visitgen"
version = "0.1.0"
authors = ["Patrick Meredith <pmeredit@protonmail.com>", "Ryan Chipman <ryan@ryanchipman.com>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["visit", "full"] }
lazy_static = "1"
proc-macro2 = "1"
quote = "1"
