[package]
name = "schema_derivation"
version = "0.0.0"
edition = "2021"

[dependencies]
agg-ast = { path = "../ast" }
bson = { workspace = true, features = ["chrono-0_4"] }
mongosql = { path = "../../mongosql" }
serde_json = { workspace = true }
thiserror = { workspace = true }
linked-hash-map = { workspace = true, features = ["serde_impl"] }

[features]
