[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongosql = { path = "../../mongosql" }
# mongosql-c = { path = "../mongosql-c" }
bson = "2"
thiserror = "1"
serde_yaml = "0.9.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[dependencies.mongodb]
version = "2.5"
default-features = false
features = ["tokio-sync"]
