[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongosql = { path = "../../mongosql" }
# mongosql-c = { path = "../mongosql-c" }
bson = "2"
thiserror = "1"
serde_yaml = "0.9.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
regex = "1.9.3"

[dependencies.mongodb]
version = "2.7"
default-features = false
features = ["tokio-sync"]


[features]
validation = []
genny = []
