[package]
name = "profiler"
version = "0.1.0"
edition = "2021"

[lib]
name = "catalog"
path = "src/catalog/lib.rs"

[[bin]]
name = "profiler"
path = "src/main.rs"


[dependencies]
mongosql = { path = "../../mongosql" }
bson = "2"
thiserror = "1"
serde_yaml = "0.9.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
regex = "1.9.3"
lazy_static = "1.4.0"
flamegraph = "0.6.3"

[target.'cfg(not(windows))'.dev-dependencies]
criterion = "0.5.1"
pprof = { version = "0.13.0", features = ["flamegraph", "criterion"] }

[[bench]]
name = "profile"
harness = false

[features]
tpch = []
