[package]
name = "profiler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "profiler"
path = "src/main.rs"

[lib]
name = "config_loader"
path = "src/config_loader/lib.rs"

[dependencies]
mongosql = { path = "../../mongosql" }
thiserror = "1"
serde_yaml = "0.9.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4.0"

[target.'cfg(not(windows))'.dev-dependencies]
criterion = "0.5.1"
pprof = { version = "0.13.0", features = ["flamegraph", "criterion"] }

[[bench]]
name = "profile"
harness = false

[features]
tpch = []
