[package]
name = "profiler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "profiler"
path = "src/main.rs"

[lib]
name = "config_loader"
path = "src/config_loader/lib.rs"

[dependencies]
mongosql = { path = "../../mongosql" }
thiserror = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
lazy_static = { workspace = true }

[target.'cfg(not(windows))'.dev-dependencies]
criterion = "0.5.1"
pprof = { version = "0.13.0", features = ["flamegraph", "criterion"] }

[[bench]]
name = "profile"
harness = false

[features]
tpch = []
